--- a/app/views/data_explorer/time_series/_results.html.erb
+++ b/app/views/data_explorer/time_series/_results.html.erb
@@ -50,7 +50,8 @@
 
 <table
   class="table dx-results"
-  data-data-explorer--results-table-highlight-target="table">
+  data-data-explorer--results-table-highlight-target="table"
+  data-data-explorer--results-table-sort-target="table">
   <colgroup>
     <%# Group 1 member labels %>
     <% if @tbl_show_group_1_headers %>
