--- a/app/views/data_explorer/_highlight_chooser.html.erb
+++ b/app/views/data_explorer/_highlight_chooser.html.erb
@@ -104,8 +104,21 @@
           <% end %>
 
           <% if @composition&.groups.size == 2 %>
-            <option value="data-dx-metric,data-dx-group-1-member-descriptor,data-dx-group-2-member-descriptor">Amongst group 1+2</option>
-            <option value="delta,data-dx-metric,data-dx-group-1-member-descriptor,data-dx-group-2-member-descriptor">Group 1+2 over time</option>
+            <option value="data-dx-metric,data-dx-group-1-member-descriptor,data-dx-group-2-member-descriptor">
+              <% if @composition.try(:metrics) && @composition.metrics.size > 1 %>
+                Each metric, <%= schema_field_label(@composition.groups[0].dimension).downcase %> and <%= schema_field_label(@composition.groups[1].dimension).downcase %>
+              <% else %>
+                Each <%= schema_field_label(@composition.groups[0].dimension).downcase %> and <%= schema_field_label(@composition.groups[1].dimension).downcase %>
+              <% end %>
+            </option>
+
+            <option value="delta,data-dx-metric,data-dx-group-1-member-descriptor,data-dx-group-2-member-descriptor">
+              <% if @composition.try(:metrics) && @composition.metrics.size > 1 %>
+                Each metric, <%= schema_field_label(@composition.groups[0].dimension).downcase %> and <%= schema_field_label(@composition.groups[1].dimension).downcase %> 𝚫 over time
+              <% else %>
+                Each <%= schema_field_label(@composition.groups[0].dimension).downcase %> and <%= schema_field_label(@composition.groups[1].dimension).downcase %> 𝚫 over time
+              <% end %>
+            </option>
           <% end %>
         <% end %>
       <% end %>
