Limit highlighting colors to target cells

--- a/app/views/data_explorer/time_series/_sort_chooser.html.erb
+++ b/app/views/data_explorer/time_series/_sort_chooser.html.erb
@@ -74,6 +74,10 @@
     <div class="d-flex">
       <input type="hidden" class="col-sort-by" value="interval">
 
+      <hr>
+
+      <h3>Sort Columns WIP</h3>
+
       <div class="form-floating input-group flex-shrink-1 mb-3 ms-2 w-50">
         <select
           data-action="data-explorer--results-table-sort#sort"
