--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,6 +20,7 @@
     <%# `:app` comes from propshaft, and is all stylesheets in app/assets/**/*.css %>
     <%# builds/ take precedence over /stylesheets %>
     <%= stylesheet_link_tag :app, "data-turbo-track": "reload" %>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
 
     <%# This will add a <script> tag for the importmap generated from %>
     <%# config/importmap.rb, **and** <script> tags for each module that is %>
