Update time range chooser help text

--- a/app/views/data_explorer/_time_range_chooser.html.erb
+++ b/app/views/data_explorer/_time_range_chooser.html.erb
@@ -70,7 +70,7 @@
           </div>
 
           <div id="time-range-chooser-dropdown-menu-relative-help">
-            <p>You've chosen a <strong>relative time range</strong>. Each time you re-run this query, the applied range will reflect the relevant dates and times in relation to when the query is run. <a href="#">Learn more</a></p>
+            <p>You've chosen a <strong>relative time range</strong>. Each time you re-run this query, the applied range will reflect the relevant dates and times in relation to when the query is run. <a href="https://help.prx.org/">Learn more</a></p>
 
             <p>If you'd rather use specific, static dates you can use the <a class="calendar-toggle" href="#"><span class="material-icons" style="font-size: 0.9rem;">date_range</span> calendar tool</a> to choose dates that won't change over time. Or you can <a href="#">lock in</a> the current dates to convert from relative to static dates.</p>
           </div>
@@ -78,7 +78,7 @@
           <div id="time-range-chooser-dropdown-menu-absolute-help">
             <p>Please note that the Data Explorer uses the <a href="https://en.wikipedia.org/wiki/Coordinated_Universal_Time"><strong>UTC/GMT time zone</strong></a> for all data and calculations. Dates and times you input will be interpreted as UTC, regardless of your local time zone.</p>
 
-            <p>If, for example, you live in New York and release an episode at 10 PM ET on April 17th, you would have to select April 18th in the Data Explorer to see that episode, since it was released on the 18th in the UTC time zone.</p>
+            <p>If, for example, you live in New York and release an episode at 10 PM ET on April 17th, you would have to select April 18th in the Data Explorer to see that episode, since it was already the 18th in the UTC time zone when the episode was released.</p>
           </div>
         </div>
       </div>
