--- a/app/views/data_explorer/_filter_chooser.html.erb
+++ b/app/views/data_explorer/_filter_chooser.html.erb
@@ -35,6 +35,7 @@
         <select
           name="<%= "filter.#{dim_key}" %>"
           data-bs-toggle="tooltip"
+          data-bs-custom-class="filter-chooser-operator-tooltip"
           data-bs-title="Choose if data matching this filter should be included or excluded from the results"
           data-bs-delay='{"show":440,"hide":10}'
           data-bs-trigger="hover"
