--- a/app/views/data_explorer/_filters_panel.html.erb
+++ b/app/views/data_explorer/_filters_panel.html.erb
@@ -26,7 +26,7 @@
     })();
   </script>
 
-  <div class="d-flex p-2">
+  <div class="d-flex mt-2 mb-2">
     <div class="flex-grow-1">Filters</div>
 
     <div>
