Resize highlight chooser

--- a/app/views/data_explorer/_highlight_chooser.html.erb
+++ b/app/views/data_explorer/_highlight_chooser.html.erb
@@ -127,5 +127,5 @@
     <label for="highlight-chooser-palette-selector">Palette</label>
   </div>
 
-  <p class="m-3 mt-4 lh-sm">Cell highlighting can help identify trends or outliers in tables. Depending on the data and the type of analysis you're doing, different options for how the colors and gradients are applied can provide different benefits.</p>
+  <p class="m-3 mt-4 lh-sm" style="font-size: 0.8rem;">Cell highlighting can help identify trends or outliers in tables. Depending on the data and the type of analysis you're doing, different options for how the colors and gradients are applied can provide different benefits.</p>
 </fieldset>
