--- a/app/views/data_explorer/_time_range_chooser.html.erb
+++ b/app/views/data_explorer/_time_range_chooser.html.erb
@@ -72,7 +72,7 @@
           <div id="time-range-chooser-dropdown-menu-relative-help">
             <p>You've chosen a <strong>relative time range</strong>. Each time you re-run this query, the applied range will reflect the relevant dates and times in relation to when the query is run. <a href="https://help.prx.org/">Learn more</a></p>
 
-            <p>If you'd rather use specific, static dates you can use the <a class="calendar-toggle" href="#"><span class="material-icons" style="font-size: 0.9rem;">date_range</span> calendar tool</a> to choose dates that won't change over time. Or you can <a href="#">lock in</a> the current dates to convert from relative to static dates.</p>
+            <p>If you'd rather use specific, static dates you can use the <a class="calendar-toggle" href="#"><span class="material-icons" style="font-size: 0.9rem;">date_range</span> calendar tool</a> to choose dates that won't change over time. Or you can <a href="#" data-action="foo#makeStatic">lock in</a> the current dates to convert from relative to static dates.</p>
           </div>
 
           <div id="time-range-chooser-dropdown-menu-absolute-help">
